--- a/style.css
+++ b/style.css
@@ -10,18 +10,22 @@
 
 .card {
   text-align: center;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  padding-left: 40px;
-  padding-right: 40px;
+
   border-radius: 10px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
   transition: all 0.5s ease;
+  height: 300px;
+  width: 300px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .heading {
   color: #29212c;
-  font-size: 16px;
+  font-size: 20px;
+  font-weight: 700;
 }
 
 .button {
@@ -30,10 +34,10 @@
   background-color: #82ce73;
   border-radius: 10px;
   border: none;
-  padding-left: 15px;
-  padding-right: 15px;
+  font-size: 16px;
   font-weight: 500;
-  width: 150px;
+  width: 140px;
+  height: 50px;
 }
 
 .button:hover {
@@ -43,8 +47,8 @@
 }
 
 .color {
-  font-size: 12px;
-  font-weight: 500;
+  font-size: 15px;
+  font-weight: 600;
   margin-right: 5px;
 }
 
